MODIFY: ignore & application proxy

--- a/patcher-anno/src/main/resources/PatcherApplication.tmpl
+++ b/patcher-anno/src/main/resources/PatcherApplication.tmpl
@@ -1,6 +1,6 @@
 package %PACKAGE%;
 
-import cn.jesse.patcher.loader.PatcherApplication;
+import cn.jesse.patcher.loader.app.PatcherApplication;
 
 /**
  * Generated application for patcher
